# MotifScan

./: .gitignore  Cargo.toml  README.md  README_CN.md  design.md  plan.md  prompt.txt
src/: cli.rs  io.rs  lib.rs  main.rs  motif.rs  output.rs  scanner.rs
