[package]
name = "MotifScan"
version = "0.1.0"
edition = "2021"

[lib]
name = "motifscan"
path = "src/lib.rs"

[[bin]]
name = "motifscan"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
memchr = "2.7"
rayon = "1.10"
csv = "1.3"
num_cpus = "1.16"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.13"

[profile.release]
codegen-units = 1
lto = true
